<resources>
    <string name="app_name">Автомобильное дело</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Автомобильное дело</string>
    <string name="nav_header_subtitle">https://carsmatterapp.azurewebsites.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_search_auto">Автомобили</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_journal">Бортжурнал</string>
    <string name="menu_recognize">Распознать</string>
    <string name="menu_top_auto">Топ 10</string>
    <string name="menu_consumables">Замены</string>
    <string name="menu_refill">Заправка</string>
    <string name="menu_brand_models">Модели бренда</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_statistics">Статистика</string>

    <string name="api_base_path">https://carsmatterapp.azurewebsites.net/api</string>
    <string name="menu_cars">Модели машин</string>
</resources>
