<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_auto"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/menu_search_auto" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_recognize"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_recognize" />
        <item
            android:id="@+id/nav_top_auto"
            android:icon="@drawable/ic_looks_5_black_24dp"
            android:title="@string/menu_top_auto" />
    </group>

</menu>
