<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.andrey.carsmatter.ui.LoginFragment"
        android:label="Вход"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.andrey.carsmatter.ui.search_car.CarsFragment"
        android:label="Вход"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/nav_brands"
        android:name="com.andrey.carsmatter.ui.search_car.BrandsFragment"
        android:label="@string/menu_search_auto"
        tools:layout="@layout/fragment_search_auto" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.andrey.carsmatter.ui.search_car.SearchFragment"
        android:label="@string/menu_search_auto"
        tools:layout="@layout/fragment_search_auto" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.andrey.carsmatter.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_journal"
        android:name="com.andrey.carsmatter.ui.journal.JournalFragment"
        android:label="@string/menu_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/nav_recognize"
        android:name="com.andrey.carsmatter.ui.recognize.RecognizeFragment"
        android:label="@string/menu_recognize"
        tools:layout="@layout/fragment_recognize" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.andrey.carsmatter.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_usercars_change"
        android:name="com.andrey.carsmatter.ui.settings.ChangeSettingsFragment"
        android:label="Мои Автомобили"
        tools:layout="@layout/fragment_change_user_car" />

    <fragment
        android:id="@+id/nav_refill_change"
        android:name="com.andrey.carsmatter.ui.journal.tabs.Refill.RefillNoteChangeFragment"
        android:label="@string/menu_refill"
        tools:layout="@layout/fragment_change_refill_note" />

    <fragment
        android:id="@+id/nav_consumables_change"
        android:name="com.andrey.carsmatter.ui.journal.tabs.Consumables.ConsumablesNoteChangeFragment"
        android:label="@string/menu_consumables"
        tools:layout="@layout/fragment_change_consumables_note" />

    <fragment
        android:id="@+id/nav_brand_models"
        android:name="com.andrey.carsmatter.ui.search_car.BrandModelsFragment"
        android:label="@string/menu_brand_models"
        tools:layout="@layout/fragment_brand_models" />

    <fragment
        android:id="@+id/nav_cars"
        android:name="com.andrey.carsmatter.ui.search_car.CarsFragment"
        android:label="@string/menu_cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.andrey.carsmatter.ui.LoginFragment"
        android:label="Вход"
        tools:layout="@layout/fragment_login" />
</navigation>